Fix rendering alignment error, and cleanup

--- a/src/index.css
+++ b/src/index.css
@@ -117,7 +117,6 @@ form {
   font-family: 'myFirstFont';
   color: #00395d;
   position: absolute;
-  left: 224px;
   top: 234px;
   height: 75px;
   width: 200px;
@@ -169,7 +168,8 @@ form {
 .image--contents {
   display: inline-block;
   height: 550px;
-  width: 550px
+  width: 550px;
+  position:relative
 }
 
 h1 {
@@ -188,10 +188,6 @@ h1 {
   display:flex;
   background-color: black;
   height: 200px;
-}
-
-.render--transform {
-  transform: scale(2) translate(25%, 25%)
 }
 
 .image--downloadable {
